@@ -44,3 +44,4 @@
  5-Apr-2020 V0.52 Suppress diagnostic logging in ReferenceSequenceCacheProvider()
  8-Apr-2020 V0.53 Adjust error handling in ReferenceSequenceCacheProvider()
  5-May-2020 V0.54 Add PubChem loader and workflow extensions
+ 9-May-2020 V0.55 Adjust cache management for PubChem refresh
